taller-kubernetes-basico/custom-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-app
  labels:
    app: custom-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: custom-app
  template:
    metadata:
      labels:
        app: custom-app
    spec:
      containers:
      - name: custom-app-container
        image: <nombre-de-tu-imagen>:<tag>
        ports:
        - containerPort: 8080
